# icalindicator

./: README.md  UserStory.md  flake.nix  pyproject.toml  result
.github/workflows/: release.yml
icalnotifier/: app.py  config.py  fetcher.py  meetings.py
tests/: test_app.py  test_config.py  test_meetings.py
